--- a/www/programar/vista/templates/tab-validarUser.html
+++ b/www/programar/vista/templates/tab-validarUser.html
@@ -7,10 +7,10 @@
         <div id="recuperaar" class="list ">
   
           <label class="item item-input item-stacked-label   datalabel">
-            <span class="input-label">correo2</span>
+            <span class="input-label">correo22</span>
             <input type="text" placeholder="@gmail.com">
           </label>
-          <button class="button button-full button-energized ">
+          <button id="btnValidar_VlUSer" class="button button-full button-energized ">
             <i class="ion-ios-cloud"></i>
             Enviar
           </button>
