--- a/www/programar/vista/templates/tab-validarUser.html
+++ b/www/programar/vista/templates/tab-validarUser.html
@@ -10,6 +10,10 @@
             <span class="input-label">correo22</span>
             <input type="text" placeholder="@gmail.com">
           </label>
+          <label class="item item-input item-stacked-label   datalabel">
+            <span class="input-label">correo22</span>
+            <input type="text" placeholder="codigo">
+          </label>
           <button id="btnValidar_VlUSer" class="button button-full button-energized ">
             <i class="ion-ios-cloud"></i>
             Enviar
