--- a/www/programar/vista/templates/tab-crear.html
+++ b/www/programar/vista/templates/tab-crear.html
@@ -58,7 +58,7 @@
     vlPass1();
     vlPass2();
     if (vltxtCorreo() && vlNombre() && vlApellido() && vlPass1() && vlPass2()) {
-      var ipServe = "http://10.73.52.108/GitHub/TV18-011/";
+      var ipServe = "http://10.73.52.198/GitHub/TV18-011/";
       var ruta = "www/programar/controlador/Clogin.php";
       var urlServe = ipServe + ruta;
       $.ajax({
@@ -67,7 +67,7 @@
           action: 'registrarUsuarios',
           nombreR: "'" + nombre + "'",
           apellidoR: "'" + apellido + "'",
-          correoR: "'" + correo + "'",
+          correoR:  correo ,          
           passwordR: "'" + password + "'",
         },
         type: 'POST',
