--- a/www/programar/vista/templates/tab-control.html
+++ b/www/programar/vista/templates/tab-control.html
@@ -9,21 +9,21 @@
   <ion-content class="padding">
     <div class="list">
 
-      <label class="item item-input">
+      <label class="item item-input item-stacked-label  datalabel">
         <span class="input-label">Estatura cm</span>
         <input type="text" id="estaturahijo">
         <br>
         <p></p>
       </label>
 
-      <label class="item item-input">
+      <label class="item item-input item-stacked-label  datalabel">
         <span class="input-label">Peso kg</span>
         <input type="text" id="pesokghijo">
         <br>
         <p></p>
       </label>
 
-      <label class="item item-input item-select">
+      <label class="item item-input item-stacked-label  datalabel item-select">
         <div class="input-label">
           Ejercicio
         </div>
