--- a/www/programar/vista/templates/tab-cuenta.html
+++ b/www/programar/vista/templates/tab-cuenta.html
@@ -13,6 +13,7 @@
           <p></p>
         </label>
         <center>
+          <label id="lbRepuesta" style="color: red"></label>
           <button class="button button-full button-energized   " id="buttini" name="sesion">
             <i class="ion-key"></i>
             iniciar sesion
