--- a/www/programar/vista/templates/tab-hijo.html
+++ b/www/programar/vista/templates/tab-hijo.html
@@ -26,30 +26,30 @@
       <p class="obligatorio" style="color: green"></p>
       <div class="list">
 
-        <label class="item item-input">
+        <label class="item item-input item-stacked-label  datalabel">
           <span class="input-label">Nombre</span>
           <input type="text" id="nombrehijo1"><br>
           <p></p>
         </label>
 
-        <label class="item item-input">
+        <label class="item item-input item-stacked-label  datalabel">
           <span class="input-label">Apellido</span>
           <input type="text" id="apellidohijo2"><br>
           <p></p>
         </label>
 
         <!--
-          <label class="item item-input">
+          <label class="item item-input item-stacked-label  datalabel">
           <span class="input-label" >Colegio</span>
           <input type="text" id="colegiohijo">
         </label>
       -->
-        <label class="item item-input">
+        <label class="item item-input item-stacked-label  datalabel">
           <span class="input-label">Ciudad</span><br>
           <input type="text" id="ciudadhijo2"><br>
           <p></p>
         </label>
-        <label class="item item-input item-select">
+        <label class="item item-input item-stacked-label  datalabel item-select">
           <div class="input-label">
             sexo
           </div>
@@ -61,7 +61,7 @@
           <br>
           <p></p>
         </label>
-        <label class="item item-input">
+        <label class="item item-input item-stacked-label  datalabel">
           <span class="input-label">nacimiento</span>
           <input type="date" id="fechahijo"><br>
           <p></p>
